# zksvm-v2

./: Cargo.toml  README.md
crates/bench-tool/: Benchmark.md  Cargo.toml
crates/bench-tool/src/: main.rs
crates/bon/: Cargo.toml
crates/bon/src/: init_config.rs  main.rs
crates/debug-db/: Cargo.toml
crates/debug-db/src/: main.rs
crates/rollup-core/: Cargo.toml
crates/rollup-core/src/: lib.rs  types.rs
crates/rollup-core/src/db/: mod.rs  recovery.rs  storage.rs
crates/rollup-core/src/sequencer/: batch.rs  commit.rs  commitment.rs  core.rs  mod.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/rpc-server/src/routes/: mod.rs  ops.rs  v1.rs
crates/rpc-server/tests/: integration_test.rs
test_db/: checkpoints.db  checkpoints.db-shm  checkpoints.db-wal
test_db/rocksdb/: 000009.sst  000010.sst  000011.sst  000012.sst  000034.sst  000035.sst  000036.sst  000037.sst  000056.sst  IDENTITY  LOG  LOG.old.1761329007221716  LOG.old.1761497837013220  LOG.old.1761499560069971  LOG.old.1761505005766812  LOG.old.1761505365736711  LOG.old.1761507017603313  LOG.old.1761507051008846  LOG.old.1761535519072389  LOG.old.1761535978293282  LOG.old.1761536075869960  LOG.old.1761536315123010  LOG.old.1761536395474220  MANIFEST-000005  MANIFEST-000068  OPTIONS-000066
