[package]
name = "bon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "init_config"
path = "src/init_config.rs"

[dependencies]
anyhow = "1"
dotenvy = "0.15.7"
solana-client = "2.1.0"
solana-sdk = "2.1.0"
solana-program = "2.1.0"
solana-commitment-config = "2.1.0"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.12", features = ["derive"] }
shellexpand = "3.1.0"