[package]
name = "debug-db"
version = "0.1.0"
edition = "2024"

[dependencies]
rollup-core = {path = "../rollup-core"}
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.24.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
dotenvy = "0.15"
bincode = "1"
hex = "0.4"
chrono = {version = "0.4", features = ["clock"]}