[package]
name = "rollup-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = "0.24.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
bincode = "1"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.8"
chrono = "0.4"
byteorder = "1.5"
hex = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_bytes = "0.11"