[package]
name = "rpc_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rollup-core = {path = "../rollup-core"}
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tempfile = "3.8" 
rocksdb = "0.24.0"
bincode = "1.3" 

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
portpicker = "0.1.1" 
serde_json = "1.0"
rollup-core = { path = "../rollup-core" }
tempfile = "3.8"
